[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perftok"
version = "0.1.0"
description = "Lightweight benchmarking tool for OpenAI-compatible LLM endpoints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "click>=8.1,<9",
    "pydantic>=2.5,<3",
    "rich>=13.0,<15",
    "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[project.scripts]
perftok = "perftok.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perftok"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
# B101: assert used in tests (fine)
# B311: random module used for benchmark prompt generation, not crypto
skips = ["B101", "B311"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
